--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <div>
-    <app-home [title]="'home component 1'"></app-home>
-    </div>
-    <div>
-    <app-home [title]="'home component 2'"></app-home>
+    <custom-todoList></custom-todoList>
 </div>
